# pygoerrors

./: .gitignore  Makefile  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
examples/decorators/: main.py
examples/simple/: main.py
examples/wrap/: main.py
pygoerrors/: __init__.py  decorators.py  errors.py  helpers.py  iterators.py  protocols.py
tests/: test_decorator.py  test_errors.py  test_format.py  test_iterators.py
