[project]
name = "pygoerrors"
version = "0.1.0"
description = "Go like errors for Python"
authors = [{ name = "dreadster3", email = "afonso.antunes@live.com.pt" }]
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.6"
mypy = "^1.15.0"
